--- a/package.json
+++ b/package.json
@@ -7,8 +7,17 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "aos": "^2.3.4",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
+    "vee-validate": "^3.4.5",
+    "vue": "^2.6.11",
+    "vue-axios": "^3.2.4",
+    "vue-loading-overlay": "^3.4.2",
+    "vue-router": "^3.4.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
