--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "swiper": "^6.5.0",
+    "v-clipboard": "^2.2.3",
     "vee-validate": "^3.4.5",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
